# Nodus

./: .gitignore  CLAUDE.md  README.md  README.ru.md  START_PROMPT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.claude/: launch.json
.claude/agents/: README.md  architect.md  backend.md  docs.md  driver.md  qa.md  ui-bridge.md
.github/workflows/: driver.yml
.nodus/: HANDOFF.md  plan.md  progress.md  sysvad_migration_plan.md
.nodus/docs/: adr-t5-multi-device-ioctl.md  ui-redesign-prompt.md
.nodus/report/: r1-t3-driver-capture-12062026.md  r2-t4-virtual-render-12062026.md  r3-t5-ioctl-kernel-13062026.md  r4-t5-ioctl-rust-13062026.md
.nodus/reports/: 001_foundation.md  002_wasapi_integration.md  003_virtual_devices.md  004_bridge.md
.nodus/task/: backlog.md  done.md  t1-laptop-check.md  t10-mic-audio-quality.md  t11-ui-redesign.md  t2-real-audio.md  t3-virtual-mic.md  t4-mic-engine.md  t5-multi-devices.md  t6-ms-signing.md  t7-capture-warning.md  t8-device-names.md  t9-mic-sink-node.md
src/: FlyoutApp.css  FlyoutApp.tsx  NodusApp.tsx  app.jsx  bridge.ts  canvas.jsx  graph-data.jsx  main.jsx  main.tsx  panels.jsx  routingGraph.ts  scenes.ts  styles.css  tauri-bridge.js  tweaks-panel.jsx  useBackend.ts  usePlaceDrag.ts  useScene.ts  useSettings.ts  useView.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/driver/nodus_audio/: README.md  adapter.cpp  common.h  install.ps1  miniport.cpp  miniport.h  mintopo.cpp  mintopo.h  mintopocap.cpp  mintopocap.h  minwavecap.cpp  minwavecap.h  minwavecapstream.cpp  minwavecapstream.h  minwavert.cpp  minwavert.h  minwavertstream.cpp  minwavertstream.h  nodus.h  nodus_audio.inf  nodus_audio.vcxproj  nodus_control.cpp  nodus_control.h  nodus_ioctl.h  ring.cpp  ring.h  stream.cpp  stream.h  uninstall.ps1
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: device_control.rs  devices.rs  mod.rs  ring_layout.rs  session.rs  virtual_capture.rs  virtual_device.rs  virtual_render.rs  wasapi.rs
src-tauri/src/commands/: bridge.rs
src-tauri/src/detection/: icon.rs  mod.rs  process.rs
src-tauri/src/routing/: engine.rs  graph.rs  mod.rs  node.rs
src-tauri/src/server/: mod.rs  rpc.rs  scene_store.rs  settings_store.rs
src/styles/: base.css  tokens.css
(+47 files in other folders)
