[package]
name = "nodus"
version = "0.1.0"
description = "Nodus — Node-based Virtual Audio Router"
authors = ["Nodus"]
license = ""
repository = ""
default-run = "nodus"
edition = "2021"
rust-version = "1.77"

[lib]
name = "nodus"
path = "src/lib.rs"

[[bin]]
name = "nodus"
path = "src/main.rs"

[[bin]]
name = "nodus-check"
path = "src/bin/nodus_check.rs"

[[bin]]
name = "ring-check"
path = "src/bin/ring_check.rs"

[[bin]]
name = "ring-play"
path = "src/bin/ring_play.rs"

[[bin]]
name = "ring-tone"
path = "src/bin/ring_tone.rs"

[[bin]]
name = "device-ctl"
path = "src/bin/device_ctl.rs"

[[bin]]
name = "mic-route"
path = "src/bin/mic_route.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
parking_lot = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
# windows-core is referenced by the #[implement] macro's generated code (windows_core::...).
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Media",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_Properties",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_Storage_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_Ole",
    # t5 control channel (device_control.rs): CfgMgr32 interface discovery,
    # CreateFileW on the interface path, DeviceIoControl.
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
